--- a/trackingTest-Info.plist
+++ b/trackingTest-Info.plist
@@ -28,5 +28,7 @@
 	<string>MainWindow</string>
 	<key>UIStatusBarHidden</key>
 	<true/>
+	<key>UIFileSharingEnabled</key>
+	<true/>
 </dict>
 </plist>
